kubernetes yaml examples and environment variable for db hostname

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ./django/src:/code
     environment:
       - DJANGO_CONFIGURATION=dev
+      - DB_HOST=db
     depends_on:
       - db
 
