--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.2.16
+Django==4.1.3
 # django-admin-multiple-choice-list-filter==0.1.1
 django-extensions==3.2.1
 django-sequences==2.7
@@ -8,8 +8,9 @@ lxml==4.3.1
 python-barcode==0.9.0
 python-docx==0.8.10
 python-stdnum==1.10
-pytz==2018.5
+pytz==2022.6
+tzdata==2022.6
 six==1.11.0
 sqlparse==0.3.0
-Werkzeug==0.14.1
+Werkzeug>=2.0.0
 debugpy==1.5.1
