Thing admin using native select2 autocomplete for type and subtype

--- a/django/src/.vscode/launch.json
+++ b/django/src/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "0.0.0.0:8000"
             ],
             "django": true,
-            "justMyCode": true
+            "justMyCode": false
         },
         {
             "name": "Python: Remote Attach",
