--- a/django/src/.vscode/launch.json
+++ b/django/src/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Django",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
+            // "program": "${workspaceFolder}/manage.py",
+            "program": "/code/manage.py",
             "args": [
                 "runserver_plus",
                 "0.0.0.0:8000"
@@ -30,7 +31,7 @@
                     "remoteRoot": "."
                 }
             ],
-            "justMyCode": true
+            "justMyCode": false
         }
     ]
 }
