--- a/docker-compose.vscode.yml
+++ b/docker-compose.vscode.yml
@@ -1,5 +1,14 @@
 version: "3.7"
 services:
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "8181:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=tidy@domain.com
+      - PGADMIN_DEFAULT_PASSWORD=tidypass
+    profiles:
+      - "db_admin"
   db:
     image: postgres:12.6
     ports:
@@ -15,7 +24,7 @@ services:
     build: ./node
     image: tidy-node
     tty: true
-    command: [ "npm", "run", "debug" ]
+    command: ["npm", "run", "debug"]
     ports:
       - "8888:8888"
       - "9101:9101"
