updated python dependencies, initial kamal deploy.yml

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "Run Django",
-            "type": "python",
+            "type": "debugpy",
             "request": "attach",
             "pathMappings": [
                 {
