--- a/docker-compose.vscode.yml
+++ b/docker-compose.vscode.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:2024-04-29-1
     ports:
       - "8181:80"
     environment:
@@ -9,6 +9,8 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=tidypass
     profiles:
       - "db_admin"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
   db:
     image: postgres:12.6
     ports:
