--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -91,7 +91,7 @@ accessories:
     files:
       # - config/mysql/production.cnf:/etc/mysql/my.cnf
       # - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-      - ./db/initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
+      - ./db/initdb_personal.sql:/docker-entrypoint-initdb.d/initdb_personal.sql
     directories:
       - postgres:/var/lib/postgresql/data/
   pgadmin:
@@ -101,12 +101,6 @@ accessories:
     env:
       secret:
         - PGADMIN_DEFAULT_PASSWORD
-    files:
-      # - config/mysql/production.cnf:/etc/mysql/my.cnf
-      # - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-      - ./db/initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
-    directories:
-      - postgres:/var/lib/postgresql/data/
     
 #   redis:
 #     image: valkey/valkey:8
