added "wait for db" script for gunicorn entrypoint

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: tidy-inventory
 
 # Name of the container image.
-image: verdienste/tidy-django
+image: atziallas/tidy-django
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 116.203.203.104
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -27,7 +27,7 @@ proxy:
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: verdienste
+  username: atziallas
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
@@ -36,6 +36,8 @@ registry:
 # Configure builder setup.
 builder:
   arch: amd64
+  dockerfile: django/Dockerfile
+  context: "./django"
   # Pass in additional build args needed for your Dockerfile.
   # args:
   #   RUBY_VERSION: <%= File.read('.ruby-version').strip %>
@@ -46,8 +48,11 @@ env:
   clear:
     DB_HOST: tidy-inventory-db
     DJANGO_CONFIGURATION: prod
-#   secret:
-#     - RAILS_MASTER_KEY
+    ALLOWED_HOST: tidy.tziallas.net
+  secret:
+    - POSTGRES_USER
+    - POSTGRES_PASSWORD
+    - SECRET_KEY
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
@@ -57,8 +62,9 @@ env:
 
 # Use a different ssh user than root
 #
-# ssh:
-#   user: app
+ssh:
+  user: root
+  keys: [ "~/.ssh/Hetzner" ]
 
 # Use a persistent storage volume.
 #
@@ -82,7 +88,7 @@ env:
 accessories:
   db:
     image: postgres:12.6
-    # host: 192.168.0.2
+    host: 116.203.203.104
     port: 5432
     env:
       secret:
@@ -96,7 +102,7 @@ accessories:
       - postgres:/var/lib/postgresql/data/
   pgadmin:
     image: dpage/pgadmin4:2024-04-29-1
-    # host: 192.168.0.2
+    host: 116.203.203.104
     port: "8181:80"
     env:
       secret:
