--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -17,5 +17,5 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 COPY ./src .
 EXPOSE 80
-CMD ["python", "-m", "gunicorn", "-c", "/code/gunicorn/config.py", "tidy.asgi:application"]
+CMD ["./wait.sh", "python", "-m", "gunicorn", "-c", "/code/gunicorn/config.py", "tidy.asgi:application"]
 
