--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -51,6 +51,7 @@ env:
     DB_HOST: tidy-inventory-db
     DJANGO_CONFIGURATION: prod
     ALLOWED_HOST: tidy-demo.tziallas.net
+    DEMO_MODE: True
   secret:
     - POSTGRES_USER
     - POSTGRES_PASSWORD
