--- a/config/deploy.demo.yml
+++ b/config/deploy.demo.yml
@@ -1,5 +1,5 @@
 # Name of your application. Used to uniquely configure containers.
-service: tidy-inventory
+service: tidy-demo
 
 # Name of the container image.
 image: atziallas/tidy-django
@@ -19,7 +19,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: tidy.tziallas.net
+  host: tidy-demo.tziallas.net
   # Proxy connects to your container on port 80 by default.
   # app_port: 3000
 
@@ -50,8 +50,8 @@ env:
   clear:
     DB_HOST: tidy-inventory-db
     DJANGO_CONFIGURATION: prod
-    ALLOWED_HOST: tidy.tziallas.net
-    DEMO_MODE: false
+    ALLOWED_HOST: tidy-demo.tziallas.net
+    DEMO_MODE: true
   secret:
     - POSTGRES_USER
     - POSTGRES_PASSWORD
