fix admin bug for Things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - DJANGO_CONFIGURATION=dev
       - DB_HOST=db
+      - DB_PORT=5432
       - DEMO_MODE=False
     depends_on:
       - db
